# bangkok-taxi-analytics

./: .gitignore  LICENSE  README.md  dest_feature_encoder.pkl  dest_target_encoder.pkl  inter_zone_end_encoder.pkl  pyproject.toml
.github/workflows/: daily_retrain.yml
.history/: .env_20251118112735  .env_20251202124816  Dockerfile_20251118195955  docker-compose_20251118200034.yml  docker-compose_20251118204739.yml  docker-compose_20251118204749.yml  docker-compose_20251202141305.yml  docker-compose_20251202152149.yml  docker-compose_20251202154801.yml  docker-compose_20251203094410.yml  docker-compose_20251203094416.yml  docker-compose_20251203095421.yml  docker-compose_20251203130923.yml  docker-compose_20251203130932.yml  docker-compose_20251203131320.yml  docker-compose_20251203185911.yml  docker-compose_20251203191251.yml  docker-compose_20251203191447.yml  docker-compose_20251203191718.yml  note_20251114231451.txt  run_pipeline_20251112210839.py
.history/.github/: workflows_20251205125200
.history/docker/: Dockerfile_20251202152103.mlflow  Dockerfile_20251202154222.mlflow  Dockerfile_20251203094343.web  Dockerfile_20251203130430.web  Dockerfile_20251203131930.mlflow  Dockerfile_20251203131951.app  Dockerfile_20251203132005.web  Dockerfile_20251203152127.web  (+1 more)
artifacts/: destination_label_encoders.pkl  duration_end_zone_encoder.pkl  duration_start_zone_encoder.pkl  inter_zone_start_encoder.pkl  pickup_rate_location_encoder.pkl
docker/: Dockerfile.mlflow
flows/: main_flow.py
scripts/: check_and_train.py
src/utils/: db.py
tests/: test_integration.py
(+147 files in other folders)
